# stock_price_moving_average

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
data/: nvda_intraday.csv  pacb_intraday.csv  stock_prices.csv  tsla_intraday.csv
src/: CMakeLists.txt  backtest_simulation.cpp  cli.cpp  csv_reader.cpp  main.cpp  price_generator.cpp  stock_signal.cu  stock_signal.cuh  tsla_prices.csv
test/: CMakeLists.txt  backtest_simulation_test.cpp  csv_reader_test.cpp
